#PK-376 Check Duplicate Email while sending verification code

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -870,6 +870,7 @@
     "ProductCategories": "Product Categories",
     "CarousalImages": "Carousal Images",
     "AddProductCategory": "Add Product Category",
-    "EditProductCategory": "Edit Product Category"
+    "EditProductCategory": "Edit Product Category",
+    "Pikachu:DuplicateEmail": "A user with same email '{0}' already exists."
   }
 }
