#PK-387 Category selection feature for products

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -880,6 +880,7 @@
     "GoogleTagManager": "Google Tag Manager",
     "GtmEnabled": "GTM Enabled",
     "ContainerId": "Container ID",
-    "GtmContainerIdIsRequired": "The Container ID field is required."
+    "GtmContainerIdIsRequired": "The Container ID field is required.",
+    "ProductCategory": "Product Category"
   }
 }
