#PK-410 Add and Edit gift UI updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -897,6 +897,7 @@
     "Background": "Background",
     "SecondaryBg": "Secondary Bg",
     "SecondaryBackground": "Secondary Background",
-    "Alert": "Alert"
+    "Alert": "Alert",
+    "uploadUpto10Images": "Upload upto 10 images"
   }
 }
