Commit For PK-565

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -1,11 +1,9 @@
 {
   "culture": "en",
   "texts": {
-    "ChooseMethod": "Choose a Method",
-    "PureImage_LeftRightSlide": "Pure Image (Left/Right Slide)",
-    "PureImage_VerticalSlide": "Pure Image (Vertical Strip)",
-    "SpecificationIntroduction": "Specification Introduction (Image on the Left, Text Description on the Right)",
-    "DisplayMethodForProductDetails": "Display Method For Product Details",
+
+
+
     "AllowOffshoreIslands": "Allow Offshore Islands",
     "ActivateLogisticProvider": "Activate Logistic Provider",
     "SevenToElevenFrozen": "7-11 Frozen",
@@ -13,12 +11,12 @@
     "PikachuOne": "Pikachu 1.0",
     "PikachuTwo": "Pikachu 2.0",
     "SelectTemplate": "Select Template",
-    "TCatDeliveryNormal": "t-Cat Normal",
-    "TCatDeliveryFreeze": "t-Cat Freeze",
-    "TCatDeliveryFrozen": "t-Cat Frozen",
-    "TCatDeliverySevenElevenNormal": "t-Cat 7-11 Normal",
-    "TCatDeliverySevenElevenFreeze": "t-Cat 7-11 Freeze",
-    "TCatDeliverySevenElevenFrozen": "t-Cat 7-11 Frozen",
+    "TCatDeliveryNormal": "T-Cat Normal",
+    "TCatDeliveryFreeze": "T-Cat Freeze",
+    "TCatDeliveryFrozen": "T-Cat Frozen",
+    "TCatDeliverySevenElevenNormal": "T-Cat 7-11 Normal",
+    "TCatDeliverySevenElevenFreeze": "T-Cat 7-11 Freeze",
+    "TCatDeliverySevenElevenFrozen": "T-Cat 7-11 Frozen",
     "PaymentStatus": "Payment Status",
     "RefundChannel": "Refund Channel",
     "AutomaticRefund": "Automatic Refund",
@@ -174,12 +172,12 @@
     "GroupBuyShortName": "Short Name",
     "GroupBuyLogo": "Logo",
     "GroupBuyBanner": "Banner Image",
-    "CarouselImages": "Carousel Images",
+
     "GroupBuyTime": "Group Buy Time",
     "Logistic": "Logistic",
     "ExcludeShippingMethod": "Exclude Shipping Method",
-    "AllowShipToOuterIsland": "Allow Ship To Outer Island",
-    "AllowShipToOverSea": "Allow ShipTo Oversea",
+    "AllowShipToOuterIsland": "Deliverable to Outlying Islands",
+    "AllowShipToOverSea": "Deliverable to Overseas",
     "ExpectDeliveryDate": "Expect Delivery Date",
     "Invoice": "Invoice",
     "IssueInvoice": "Issue Invoice",
@@ -196,12 +194,12 @@
     "CustomerInformation": "Customer Information",
     "ExchangePolicy": "Exchange Policy",
     "NotifyEmail": "Notify Email",
-    "AddModule": "Add Module",
+
     "DefaultPaymentGateWay": "Default Payment Gateway",
     "ProductImageModule": "Product Image Module",
     "SelectItem": "Select Item",
     "ProductDescriptionModule": "Product Description Module",
-    "ProductGroupModule": "Product Group Module",
+
     "SelectModule": "Select Module",
     "IndexAnchor": "Index Anchor",
     "Pikachu:GroupBuyModuleCannotBeEmpty": "Group Buy Module Can Not Be Empty",
@@ -269,10 +267,10 @@
     "AllHandOverTheGoodsWithoutPayment": "All Handover The Goods Without Payment",
     "BlackCatHomeDelivery": "Black Cat Home Delivery",
     "PostOffice": "Post Office",
-    "SelfPickup": "Self Pickup",
+    "SelfPickup": "Self-Pickup",
     "BlackCat": "Black Cat",
-    "BlackCat1": "Black Cat",
-    "HomeDelivery": "Home Delivery",
+    "BlackCat1": "B-Normal",
+    "HomeDelivery": "In-Person Delivery",
     "OrderItems": "Order Items",
     "Address": "Address",
     "Remarks": "Remarks",
@@ -478,9 +476,9 @@
     "Weekend14To18": "Weekend 14-18",
     "UnableToSpecifyDuringPeakPeriods": "Unable to Specify During Peak Periods",
     "PleaseContactUs": "Please contact us",
-    "Before13PM": "Before 13p.m",
-    "Between14To18PM": "14-18 p.m",
-    "Inapplicable": "Inapplicable",
+    "Before13PM": "Before 13:00",
+    "Between14To18PM": "14:00 to 18:00",
+    "Inapplicable": "Not Specified",
     "LastUpdatedDate": "Last Updated Date",
     "Taxable": "Taxable",
     "Non Taxable": "Non Taxable",
@@ -534,8 +532,8 @@
     "SentToBackStage": "Sent To Back Stage",
     "VoidInvoice": "Void Invoice",
     "IssueCreditNote": "Issue Credit Note",
-    "BlackCatFreeze": "Black Cat Freeze",
-    "BlackCatFrozen": "Black Cat Frozen",
+    "BlackCatFreeze": "B-Freeze",
+    "BlackCatFrozen": "B-Frozen",
     "SetGroupBuyPrice": "Set GroupBuy Price",
     "InvoiceIssueStatus": "Invoice Issue Status",
     "ReturnOrder": "Return",
@@ -887,11 +885,7 @@
     "ContainerId": "Container ID",
     "GtmContainerIdIsRequired": "The Container ID field is required.",
     "ProductCategory": "Product Category",
-    "Enum:ColorScheme.1": "Forest Dawn",
-    "Enum:ColorScheme.2": "Tropical Sunset",
-    "Enum:ColorScheme.3": "Deep Sea Night",
-    "Enum:ColorScheme.4": "Sweet Apricot Cream",
-    "Enum:ColorScheme.5": "Desert Dawn",
+
     "Primary": "Primary",
     "Secondary": "Secondary",
     "Background": "Background",
@@ -899,6 +893,40 @@
     "SecondaryBackground": "Secondary Background",
     "Alert": "Alert",
     "uploadUpto10Images": "Upload upto 10 images",
-    "PleaseFillInTheRequiredInformation": "Please Fill In The Required Information"
+    "PleaseFillInTheRequiredInformation": "Please Fill In The Required Information",
+    "No file chosen": "No File Selected",
+    "Or drop files here": "Or Drop Files Here",
+    "HomeDeliveryType": "Home Delivery Type",
+    "ConvenienceStoreType": "Convenience Store Type",
+    "Self-PickupType": "Self-Pickup Type",
+    "DeliveredByStoreType": "Delivered By Store Type",
+    "ColorSchemes": "Color Schemes",
+    "SelectColorTheme": "Select Color Theme",
+    "ChooseColorTheme": "Choose Color Theme",
+    "Enum:ColorScheme.1": "Forest Dawn",
+    "Enum:ColorScheme.2": "Tropical Sunset",
+    "Enum:ColorScheme.3": "Deep Sea Night",
+    "Enum:ColorScheme.4": "Sweet Apricot Cream",
+    "Enum:ColorScheme.5": "Desert Dawn",
+    "AddModule": "Add Module",
+    "DisplayMethodForProductDetails": "Display Method For Product Details",
+    "ChooseMethod": "Choose a Method",
+    "PureImage_LeftRightSlide": "Pure Image (Left/Right Slide)",
+    "PureImage_VerticalSlide": "Pure Image (Vertical Strip)",
+    "SpecificationIntroduction": "Specification Introduction (Image on the Left, Text Description on the Right)",
+    "ProductGroupModule": "Product Group Module",
+    "SelectStyle": "Select Style",
+    "SmallImage": "Small Image",
+    "LargeImage": "Large Image",
+    "Search...": "Search...",
+    "CarouselImages": "Carousel Images",
+    "AddLink": "Add Link",
+    "Title": "Title",
+    "SubTitle": "Sub Title",
+    "BodyText": "Body Text",
+    "ButtonText": "Button Text",
+    "ButtonLink": "Button Link"
+
+
   }
 }
