Commit For PK-573

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -926,7 +926,9 @@
     "BodyText": "Body Text",
     "ButtonText": "Button Text",
     "ButtonLink": "Button Link",
-    "QuantityReach": "Quantity Reaches"
+    "QuantityReach": "Quantity Reaches",
+    "Description": "Description",
+    "AddNew": "Add New"
 
 
   }
