Commit For PK-574

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -928,7 +928,8 @@
     "ButtonLink": "Button Link",
     "QuantityReach": "Quantity Reaches",
     "Description": "Description",
-    "AddNew": "Add New"
+    "AddNew": "Add New",
+    "Choose files": "Choose files"
 
 
   }
