Commit For Pk-575

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -931,7 +931,9 @@
     "AddNew": "Add New",
     "Choose files": "Choose files",
     "UseECPayelectronicreceipt": "Use ECPay electronic invoice",
-    
+    "Ifthissettingisturnedoff,pleaseprinttheinvoiceforthecustomer": "If this setting is turned off,please print the invoice for the customer",
+    "StatusOnInvoiceIssue": "Status On Invoice Issue",
+
 
 
   }
