Commit For PK-579

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -933,7 +933,7 @@
     "UseECPayelectronicreceipt": "Use ECPay electronic invoice",
     "Ifthissettingisturnedoff,pleaseprinttheinvoiceforthecustomer": "If this setting is turned off,please print the invoice for the customer",
     "StatusOnInvoiceIssue": "Status On Invoice Issue",
-
+    "City": "City"
 
 
   }
