--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -967,7 +967,8 @@
     "SpecificationIntroduction": "規格介紹（左圖，右文說明",
     "Ifthissettingisturnedoff,pleaseprinttheinvoiceforthecustomer": "若此設置關閉，請自行為顧客列印發票",
     "Info": "提醒您",
-    "StatusOnInvoiceIssue": "開立發票狀態"
+    "StatusOnInvoiceIssue": "開立發票狀態",
+    "City": "城市"
 
 
   }
