Commit For PK-581

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -974,7 +974,8 @@
     "StoreCustomerServiceReply": "商店客服回覆",
     "CustomerServiceHistory": "客服歷史記錄",
     "SelectTemperatureControl": "選擇溫層",
-    "ConvenienceStore": "超商取貨資訊"
+    "ConvenienceStore": "超商取貨資訊",
+    
 
 
   }
