Commit For PK-582

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -303,7 +303,7 @@
     "Open": "開啟",
     //Orders
     "Order": "訂單",
-    "Orders": "訂單",
+    "Orders": "總訂單",
     "OrderCreated": "訂單成立",
     "OrderDate": "訂購日期",
     "OrderDelivery": "物流單",
@@ -975,7 +975,17 @@
     "CustomerServiceHistory": "客服歷史記錄",
     "SelectTemperatureControl": "選擇溫層",
     "ConvenienceStore": "超商取貨資訊",
+    "Phone": "電話",
+
+    "Spent": "總消費",
+    "Birthday": "生日",
     
+    "Unpaid/Due": "未付款/已過期",
+   
+    "Update": "更新",
+    "Amount": "總發放金額",
+    "Deductions": "總使用金額"
+
 
 
   }
