--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -939,8 +939,17 @@
     "StoreCustomerServiceReply": "Store Customer Service Reply",
     "CustomerServiceHistory": "Customer Service History",
     "SelectTemperatureControl": "Select Temperature Control",
-    "ConvenienceStore": "Convenience Store"
-
+    "ConvenienceStore": "Convenience Store",
+    "Phone": "Phone",
+    "Orders": "Orders",
+    "Spent": "Spent",
+    "Birthday": "Birthday",
+    "Paid": "Paid",
+    "Unpaid/Due": "Unpaid/Due",
+    "Refunded": "Refunded",
+    "Update": "Update",
+    "Amount": "Amount",
+    "Deductions": "Deductions"
 
 
   }
