--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -267,7 +267,8 @@
     "Menu:LogisticsManagement": "物流管理",
     "Menu:LogisticsProviderSettings": "物流商設定",
     "Menu:OrderManagement": "訂單管理",
-    "Menu:Orders": "訂單管理",
+    "Menu:Orders": "訂單列表",
+
     "Menu:PaymentManagement": "金流管理",
     "Menu:ProductManagement": "商品管理",
     "Menu:ReturnAndExchangeOrder": "退換貨列表",
@@ -303,6 +304,7 @@
     "Open": "開啟",
     //Orders
     "Order": "訂單",
+    "OrdersList": "訂單列表",
     "Orders": "總訂單",
     "OrderCreated": "訂單成立",
     "OrderDate": "訂購日期",
@@ -979,9 +981,9 @@
 
     "Spent": "總消費",
     "Birthday": "生日",
-    
+
     "Unpaid/Due": "未付款/已過期",
-   
+
     "Update": "更新",
     "Amount": "總發放金額",
     "Deductions": "總使用金額"
