--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -955,7 +955,9 @@
     "NoOfIssuedCodes": "No Of Issued Codes",
     "MaximunUsePerPerson": "Maximun Use Per Person",
     "UpdateDiscountCode": "Update Discount Code",
-    "StagedSettings": "Staged Settings"
+    "StagedSettings": "Staged Settings",
+    "Members": "Members List",
+    "Export": "Export"
 
 
   }
