Commit For PK-581

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -336,6 +336,7 @@
     "Pikachu:RefundIsOnlyAvailableForCreditCardPayments": "Refund Is Only Available For Credit Card Payments",
     "AreYouSureToRefundThisOrder?": "Are You Sure You Want To Refund This Order?",
     "Refund": "Refund",
+    "RefundsList": "Refunds List",
     "Permission:Refunds": "Refund Management",
     "SubmissionTime": "Submission Time",
     "ReviewCompletionTime": "Review Completion Time",
