--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -994,7 +994,8 @@
     "UpdateDiscountCode": "更新加購商品",
     "StagedSettings": "分段設定",
     "Members": "會員列表",
-    "Export": "導出"
+    "Export": "導出",
+    "RefundsList": "退款列表"
 
 
 
