--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -995,7 +995,15 @@
     "StagedSettings": "分段設定",
     "Members": "會員列表",
     "Export": "導出",
-    "RefundsList": "退款列表"
+    "RefundsList": "退款列表",
+    "TenantInformation": "租戶資訊",
+    "CustomerServiceInformation": "客服中心",
+    "FrontendInformation": "前台資訊",
+    "SocialMedia": "社群媒體",
+    "GoogleTagManager": "Google 標籤管理",
+    "GtmEnabled": "啟用 GTM",
+    "GtmContainerIdIsRequired": "Container ID 欄位不可為空"
+
 
 
 
