--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -985,14 +985,14 @@
     "BorneByStore": "Borne By Store",
     "BorneByCustomer": "Borne By Customer",
     "SelectReverseLogisticShippingFee": "Select Reverse Logistic Shipping Fee",
-    "SelectShippingLabelFormSevenEleven": "Select Shipping Label Form Seven Eleven"
+    "SelectShippingLabelFormSevenEleven": "Select Shipping Label Form Seven Eleven",
 
 
 
 
 
 
-    "Export": "Export",
+   
     "RoundedCornersWithoutFullWidth": "Rounded Corners Without Full Width",
     "SquareCornersWithoutFullWidth": "Square Corners Without Full Width",
     "FullWidthWithLargeImage": "Full Width With Large Image"
