--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -1033,13 +1033,13 @@
     "SelectShippingLabelFormSevenEleven": "選擇託運單7-11",
     "T-Cat": "黑貓",
     "CashOnly": "只收現金",
-    "CardAndMobilePaymentsAccepted": "接受刷卡和行動支付"
+    "CardAndMobilePaymentsAccepted": "接受刷卡和行動支付",
 
 
 
 
 
-    "GtmContainerIdIsRequired": "Container ID 欄位不可為空",
+   
     "RoundedCornersWithoutFullWidth": "圓角無滿版",
     "SquareCornersWithoutFullWidth": "直角無滿版",
     "FullWidthWithLargeImage": "滿版大圖"
