--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -272,6 +272,7 @@
     "BlackCat": "Black Cat",
     "BlackCat1": "B-Normal",
     "HomeDelivery": "In-Person Delivery",
+    "OrderDetailsHomeDelivery": "Home Delivery",
     "OrderItems": "Order Items",
     "Address": "Address",
     "Remarks": "Remarks",
