--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -302,6 +302,7 @@
     "Notes": "筆記",
     "NotFound": "查無此物",
     "NotifyEmail": "通知信件文案",
+    "NotificationBar": "通知欄",
     "Open": "開啟",
     //Orders
     "Order": "訂單",
