Commit For PK-565

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -4,8 +4,8 @@
 
 
 
-    "AllowOffshoreIslands": "Allow Offshore Islands",
-    "ActivateLogisticProvider": "Activate Logistic Provider",
+    "AllowOffshoreIslands": "Deliverable to Outlying Islands",
+    "ActivateLogisticProvider": "Enable Logistics Provider",
     "SevenToElevenFrozen": "7-11 Frozen",
     "Pikachu:InCompatibleModule": "Cannot save due to incompatible modules.",
     "PikachuOne": "Pikachu 1.0",
@@ -416,8 +416,9 @@
 
     //LogisticsManagement
     "LogisticsProviderSettings": "Logistics Provider Settings",
-    "GreenWorldLogistics": "Green World Logistics B2C",
-    "GreenWorldLogisticsC2C": "Green World Logistics C2C",
+    "GreenWorldLogistics": "ECPay Logistics B2C",
+    "GreenWorldLogisticsC2C": "ECPay Logistics C2C",
+    "TCat": "T-Cat",
     "SenderPhoneNumber": "Sender Phone Number",
     "LogisticsType": "Logistics Type",
     "LogisticsSubType": "Logistics Sub Type",
