--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -3,7 +3,7 @@
   "texts": {
     "ActivateLogisticProvider": "啟用物流提供商",
     "AllowOffshoreIslands": "可寄送台灣離島",
-    "SevenToElevenFrozen": "7-11 Frozen",
+    "SevenToElevenFrozen": "7-11 冷凍",
     "Paid": "已付款’",
     "PaymentStatus": "款項狀態",
     "RefundChannel": "退款渠道",
