#PK-420 Privacy Policy and Frontend Information tabs

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -992,6 +992,7 @@
     "available": "available",
     "New": "New",
     "TenantInformationUpdated": "Tenant Information Updated!",
-    "CustomerServiceUpdated": "Customer Service Updated!"
+    "CustomerServiceUpdated": "Customer Service Updated!",
+    "PrivacyPolicyUpdated": "Privacy Policy Updated!"
   }
 }
