#PK-420 Tenant Settings Updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -993,6 +993,7 @@
     "New": "New",
     "TenantInformationUpdated": "Tenant Information Updated!",
     "CustomerServiceUpdated": "Customer Service Updated!",
-    "PrivacyPolicyUpdated": "Privacy Policy Updated!"
+    "PrivacyPolicyUpdated": "Privacy Policy Updated!",
+    "FrontendInformationUpdated": "Frontend Information Updated!"
   }
 }
