#PK-420 Tenant Social Media and GTM tabs

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -994,6 +994,8 @@
     "TenantInformationUpdated": "Tenant Information Updated!",
     "CustomerServiceUpdated": "Customer Service Updated!",
     "PrivacyPolicyUpdated": "Privacy Policy Updated!",
-    "FrontendInformationUpdated": "Frontend Information Updated!"
+    "FrontendInformationUpdated": "Frontend Information Updated!",
+    "SocialMediaUpdated": "Social Media Updated!",
+    "GoogleTagManagerUpdated": "Google Tag Manager Updated!"
   }
 }
