Commit For PK-679

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -48,6 +48,9 @@
     "Menu:TenantBillingReport": "Tenant Billing Report",
     "Welcome": "Welcome",
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+    "Permission:GroupBuyManagement": "Group Buy Management",
+    "Permission:GroupBuyPageConfig": "Group Buy Page Config",
+    "Permission:WebsiteSettings": "Website Settings",
     "Permission:GroupBuyList": "Group Buy List",
     "Permission:GroupBuyReport": "Group Buy Report",
     "Permission:GoodsList": "Goods List",
@@ -1003,6 +1006,23 @@
     "PrivacyPolicyUpdated": "Privacy Policy Updated!",
     "FrontendInformationUpdated": "Frontend Information Updated!",
     "SocialMediaUpdated": "Social Media Updated!",
-    "GoogleTagManagerUpdated": "Google Tag Manager Updated!"
+    "GoogleTagManagerUpdated": "Google Tag Manager Updated!",
+    "Permission:InventoryReport": "Inventory Report",
+    "Permission:Item": "Item",
+    "Permission:Update": "Update",
+    "Permission:SetItem": "Set Item",
+    "Permission:SetItemDetails": "Set Item Details",
+    "Permission:ReturnExchangeOrder": "Return Exchange Order",
+    "Permission:RefundProcess": "Refund Process",
+    "Permission:CashFlowDealerSettings": "Cash Flow Dealer Settings",
+    "Permission:CashFlowReconciliationStatement": "Cash Flow Reconciliation Statement",
+    "Permission:EmailSettings": "Email Settings",
+    "Permission:AutomaticEmailing": "Automatic Emailing",
+    "Permission:ShoppingCredits": "Shopping Credits",
+    "Permission:ProductManagement": "Product Management",
+    "Permission:OrderManagement": "Order Management",
+    "Permission:LogisticsManagement": "Logistics Management",
+    "Permission:SystemManagement": "System Management",
+    "Permission:PaymentManagement": "Payment Management"
   }
 }
