--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/zh-Hant.json
@@ -331,7 +331,7 @@
     "Penghu": "澎湖",
     "Permission:GroupBuyManagement": "團購管理",
     "Permission:GroupBuyPageConfig": "Group Buy Page Config",
-    "Permission:WebsiteSettings": "Website Settings",
+    "Permission:WebsiteSettings": "官網設定",
     "Permission:AddStoreComments": "新增商家備註",
     "Permission:DeliveryTemperatureCost": "廠商統一出貨設定",
     "Permission:E-InvoiceSetting": "電子發票設定",
@@ -1058,7 +1058,7 @@
     "Permission:SetItem": "商品組",
     "Permission:SetItemDetails": "SetItemDetails",
     "Permission:ReturnExchangeOrder": "退換貨管理",
-    "Permission:RefundProcess": "Refund Process",
+    "Permission:RefundProcess": "退款申請",
     "Permission:CashFlowDealerSettings": "金流渠道設定",
     "Permission:CashFlowReconciliationStatement": "金流對帳表",
     "Permission:EmailSettings": "郵件設定",
